Random number generator code added

--- a/Documents/Websites/index.html
+++ b/Documents/Websites/index.html
@@ -73,12 +73,18 @@
                     <li><a href="Bootstrap 4 Sites/site10.html" target="_blank">Bootstrap 4 Website 10</a></li>                                                                                            
                     <li><a href="Bootstrap 4 Sites/site11.html" target="_blank">Bootstrap 4 Website 11</a></li>                                                                                            
                     <li><a href="Bootstrap 4 Sites/site12.html" target="_blank">Bootstrap 4 Website 12</a></li>                                                                                            
+                    <li>
+                        <a href="Bootstrap 4 Sites/site13.html" target="_blank">Bootstrap 4 Website 13</a>,
+                        <a href="https://github.com/hayanisaid/bootstrap4-website" target="_blank">(Github source)</a>,
+                        <a href="https://medium.com/free-code-camp/learn-bootstrap-4-in-30-minute-by-building-a-landing-page-website-guide-for-beginners-f64e03833f33" target="_blank">(Medium article)</a> 
+                    </li>                                                                                            
                 </ul>
             </li>
 
             <li><b>Javascript examples:</b>
                 <ul>
                     <li><a href="gallery website/BinaryCalculator.html" target="_blank">Binary Calculator</a></li>                    
+                    <li><a href="gallery website/JavascriptExercise01.html" target="_blank">Javascript Exercise 1</a></li>                    
                 </ul>
             </li>
                
@@ -125,6 +131,12 @@
                         <a href="https://github.com/dropways/deskapp" target="_blank">(Github Page)</a>
                     </li>                                                            
 
+                    <li>
+                        <a href="https://bootstrapious.com/free-templates" target="_blank">BOOTSTRAP TEMPLATES</a>
+                    </li>
+                    <li>
+                        <a href="https://www.freecodecamp.org/news/ui-ux-design-tutorial-from-zero-to-hero-with-wireframe-prototype-figma/" target="_blank">UI / UX Design with Wireframe + Prototype + Design in Figma</a>
+                    </li>
                 </ul>
             </li>
 
